# snowpark_polar_tests

./: .gitignore  README.md  pyproject.toml  setup.sql
code_using_my_code/: program.py
de_with_polars/: README.md  pyproject.toml
de_with_polars/data_engineering_package/advanced/: advanced.py
de_with_polars/data_engineering_package/base/: base_transformations.py
de_with_polars/data_engineering_package/process/: process1.py  process2.py
de_with_polars/data_engineering_package/scripts/: collect_sample_data.sql
de_with_polars/data_engineering_package/utilities/: common.py
